# CallCenter

./: CMakeLists.txt  CallCenterClients.db  call_center.cpp
imgui/: imconfig.h
requirements/: SQLiteCpp.exp  SQLiteCpp.lib
sqlite3/lib/: sqlite3.lib
